  case wwas created
* system menu icon was renamed to logo.png from star.png
* strip moved to separete target and not done automatically after compile
* by default make leaves output as is, to see summaries only run 'make Q=1'
* enbling dependency checking by default
* adding svn ebuild fbpanel-2009.ebuild
* adding tooltips to cpu and net plugins
* BgBox use BG_STYLE by default

5.2
* fixing segfault in menu plugin
* extra spaces in lunchbar plugin were removed
* replacing obsolete GtkTooltips with GtkTooltip
* plugins' install path is set to LIBDIR/fbpanel instead of LIBEXECDIR/fbpanel
* fixing short flash of wrong background on startup




5.1
* Tooltips can have mark-uped text, like '<b>T</b>erminal'
* Cpu plugin is fixed and working
* Added general chart plugin (used by cpu and net monitors)
* Code layout was changed, new configure system and new makefiles set was 
  adopted
* fixed segfault in taskbar plugin
* background pixmap drawing speed ups and bugfixes

4.13
New Features:
* support for "above all" and "below all" layering states. Global section
  was added string variable
      Layer = None | Above | Below
* to speed start-up, panel does not have window icon, only configuator window has
* Control-Button3 click launches configureation dialog
* taskbar was changed to propagate Control-Button3 clicks to parent window i.e to panel
* launchbar was changed to propagate Control-Button3 clicks to parent window
* pager was changed to propagate Control-Button3 clicks to parent window
* dclock was changed to propagate Control-Button3 clicks to parent window
* menu was changed to propagate Control-Button3 clicks to parent window
* normal support for round corners. Config file gets new global integer option - RoundCornersRadius
* system tray transparency fix
* clock startup delay was removed
* menu: fixed segfault caused by timeout func that used stale pointer



4.12
New Features:
* smooth icon theme change without panel reload